--- a/projects/autoseed/src/index.html
+++ b/projects/autoseed/src/index.html
@@ -75,6 +75,58 @@
         flex-wrap: wrap;
         margin-bottom: 8px;
       }
+      .hud-group {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: wrap;
+      }
+      .hud-tooltip {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+        padding: 2px 6px;
+        border-radius: 8px;
+        pointer-events: auto;
+        cursor: help;
+        transition: color 0.15s ease, background 0.15s ease;
+      }
+      .hud-tooltip:hover {
+        color: var(--accent);
+        background: rgba(255, 207, 110, 0.12);
+      }
+      [data-tooltip] {
+        position: relative;
+      }
+      [data-tooltip]::after {
+        content: attr(data-tooltip);
+        position: absolute;
+        left: 0;
+        bottom: calc(100% + 8px);
+        transform: translateY(6px);
+        background: rgba(8, 12, 24, 0.95);
+        color: var(--ink);
+        padding: 6px 8px;
+        border-radius: 8px;
+        border: 1px solid rgba(255, 207, 110, 0.25);
+        box-shadow: 0 10px 24px rgba(5, 10, 25, 0.45);
+        font-size: 11px;
+        letter-spacing: 0.04em;
+        text-transform: none;
+        white-space: normal;
+        width: max-content;
+        max-width: 240px;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.15s ease, transform 0.15s ease;
+        z-index: 20;
+      }
+      [data-tooltip]:hover::after,
+      [data-tooltip]:focus-visible::after {
+        opacity: 1;
+        transform: translateY(0);
+      }
       .controls {
         display: flex;
         gap: 6px;
@@ -110,10 +162,19 @@
         letter-spacing: 0.08em;
         text-transform: uppercase;
         cursor: pointer;
+        transition: background 0.15s ease, box-shadow 0.15s ease, transform 0.15s ease;
       }
       button:disabled {
         opacity: 0.4;
         cursor: not-allowed;
+      }
+      button:not(:disabled):hover {
+        background: rgba(255, 207, 110, 0.3);
+        box-shadow: 0 0 0 1px rgba(255, 207, 110, 0.45), 0 10px 20px rgba(5, 10, 25, 0.45);
+        transform: translateY(-1px);
+      }
+      button:not(:disabled):active {
+        transform: translateY(0);
       }
       .hint {
         position: fixed;
