--- a/projects/autoseed/src/index.html
+++ b/projects/autoseed/src/index.html
@@ -26,6 +26,7 @@
         display: block;
         width: 100vw;
         height: 100vh;
+        touch-action: none;
       }
       #hud {
         position: fixed;
